--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.20.6",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "meteor-node-stubs": "^1.2.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
